5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1679_1880.log
== TEST (2019-04-26 21:56:43) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("numero: "))

if(a == 1 <= a <= 12):
	j=janeiro
	if(a == j.lower())	
	print(j)
	else:
		print("numero de mes invalido")
else:
	print("numero de mes invalido")
-- ERROR:
File "XXXX", line 6
    if(a == j.lower())	
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:57:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("numero: "))

if(a == 1 <= a <= 12):
	j=janeiro
	if(a == "j".lower())	
	print(j)
	else:
		print("numero de mes invalido")
else:
	print("numero de mes invalido")
-- ERROR:
File "XXXX", line 6
    if(a == "j".lower())	
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:57:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("numero: "))

if(a == 1 <= a <= 12):
	j=janeiro
	if(a == "janeiro".lower())	
	print(j)
	else:
		print("numero de mes invalido")
else:
	print("numero de mes invalido")
-- ERROR:
File "XXXX", line 6
    if(a == "janeiro".lower())	
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 22:48:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("numero: "))

if(a <= 12 and a > 0):
	if(a == 1):	
		print("janeiro")
	elif(a == 2):
		print("fevereiro")
	elif(a == 3):
		print("marco")
	elif(a == 4):
		print("abril")
	elif(a == 5):
		print("maio")
	elif(a == 6):
		print("junho")
	elif(a == 7):
		print("julho")
	elif(a == 8):
		print("agosto")
	elif(a == 9):
		print("setembro")
	elif(a == 10):
		print("outubro")
	elif(a == 11):
		print("novembro")
	elif(a == 12)	
	print("dezembro")
	else:
		print("numero de mes invalido")
else:
	print("numero de mes invalido")
-- ERROR:
File "XXXX", line 27
    elif(a == 12)	
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 22:49:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("numero: "))

if(a <= 12 and a > 0):
	if(a == 1):	
		print("janeiro")
	elif(a == 2):
		print("fevereiro")
	elif(a == 3):
		print("marco")
	elif(a == 4):
		print("abril")
	elif(a == 5):
		print("maio")
	elif(a == 6):
		print("junho")
	elif(a == 7):
		print("julho")
	elif(a == 8):
		print("agosto")
	elif(a == 9):
		print("setembro")
	elif(a == 10):
		print("outubro")
	elif(a == 11):
		print("novembro")
	else:	
	   print("dezembro")
else:
	print("numero de mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 22:49:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("numero: "))

if(a <= 12 and a > 0):
	if(a == 1):	
		print("janeiro")
	elif(a == 2):
		print("fevereiro")
	elif(a == 3):
		print("marco")
	elif(a == 4):
		print("abril")
	elif(a == 5):
		print("maio")
	elif(a == 6):
		print("junho")
	elif(a == 7):
		print("julho")
	elif(a == 8):
		print("agosto")
	elif(a == 9):
		print("setembro")
	elif(a == 10):
		print("outubro")
	elif(a == 11):
		print("novembro")
	else:	
	   print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.206972
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
